@@ -103,12 +103,21 @@ struct _LoadGraph {
     int cpu_initialized;       
 };
 
+enum
+{
+	NEEDS_REMOVAL,
+	NEEDS_ADDITION,
+	NEEDS_NOTHING
+};
+
 struct _ProcInfo
 {
 	GtkTreeIter 	node;
-	GtkTreeIter 	parent_node;
+	GtkTreePath     *path;
+	ProcInfo    *parent;
+	GList *children;
 	gboolean	visible;
-	gboolean	has_parent;
+	gint queue;
 	GdkPixbuf	*pixbuf;
 	gchar		*name;
 	gchar		*user;
