@@ -1,3 +1,8 @@
+2004-05-29  Kevin Vandersloot <kfv101 psu edu>
+
+	* proctable.c: simplify to process table code a lot. Should allow for easier addition
+	of new features
+
 2004-03-20  Kevin Vandersloot <kfv101 psu edu>
 
 	* callbacks.c: take into account the block size to determine disk sizes.
